--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>[5.9.1,5.10.0)</version>
+            <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>[3.25.3,3.26.0)</version>
+            <version>3.26.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
