--- a/trex2-lib/pom.xml
+++ b/trex2-lib/pom.xml
@@ -1,7 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-    <artifactId>trex2-lib</artifactId>
+  <artifactId>trex2-lib</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>trex2-lib</name>
@@ -13,7 +14,11 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <dependencies>
-
+    <dependency>
+      <groupId>com.github.f4b6a3</groupId>
+      <artifactId>uuid-creator</artifactId>
+      <version>6.0.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
