--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <maven.compiler.release>22</maven.compiler.release>
   </properties>
   <modules>
     <module>trex2-lib</module>
@@ -36,7 +37,6 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <release>23</release>
           <compilerArgs>
             <arg>-Werror</arg>
           </compilerArgs>
