--- a/trex2-lib/pom.xml
+++ b/trex2-lib/pom.xml
@@ -26,6 +26,12 @@
             <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
   <build>
     <plugins>
