--- a/trex2-sherlock/pom.xml
+++ b/trex2-sherlock/pom.xml
@@ -25,5 +25,15 @@
             <version>24.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2-mvstore</artifactId>
+            <version>2.3.232</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.trex-paxos</groupId>
+            <artifactId>trex2-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
