--- a/trex2-sherlock/pom.xml
+++ b/trex2-sherlock/pom.xml
@@ -3,10 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>trex2-sherlock</artifactId>
+    <artifactId>paxos-advisory-locks</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>trex2-sherlock</name>
+    <name>paxos-advisory-locks</name>
     <url>https://github.com/trex-paxos/trex2</url>
+    <description>
+        Advisory locks are application-level locks that allow developers to coordinate access to shared resources across multiple database sessions. They are explicitly controlled by the application code, unlike standard database locks
+    </description>
     <parent>
         <groupId>com.github.trex-paxos</groupId>
         <artifactId>trex2</artifactId>
