big SerDe refactor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,9 @@
   "java.debug.settings.onBuildFailureProceed": true,
   "java.test.config": {
     "vmArgs": []
-  }
+  },
+  "files.watcherExclude": {
+    "**/target": true
+  },
+  "maven.view": "hierarchical"
 }
