--- a/trex-locks/pom.xml
+++ b/trex-locks/pom.xml
@@ -14,7 +14,7 @@
     </description>
     <parent>
         <groupId>com.github.trex-paxos</groupId>
-        <artifactId>trex2</artifactId>
+        <artifactId>trex</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.trex-paxos</groupId>
-            <artifactId>trex2-lib</artifactId>
+            <artifactId>trex-lib</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
