--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </description>
   <modules>
     <module>trex-lib</module>
-    <module>trex-locks</module>
+    <!-- <module>trex-locks</module> -->
     <module>trex-paxe</module>
   </modules>
   <dependencies>
