--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modules>
         <module>trex-lib</module>
         <!-- <module>trex-locks</module> -->
-        <!--    <module>trex-paxe</module>-->
+        <module>trex-paxe</module>
     </modules>
     <dependencies>
         <dependency>
