--- a/trex-paxe/pom.xml
+++ b/trex-paxe/pom.xml
@@ -20,5 +20,13 @@
             <artifactId>trex-lib</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.trex-paxos</groupId>
+            <artifactId>trex-lib</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
