refactor that upcall must be while the mutex is held (#11)
* work in progress

* before refactor that upcall must be while the mutex is held

* wip

* core lib tests working again

* mid refactor of doing work holding mutex

* silence warnings

* refactor complete but SimulationTest asserts are wrong

* docs

* docs

* wip

* wip

* wip

* wip

* wip

* down to one failing test

* fixed lib tests

* refactored InMemoryNetwork and StackServiceImpl

* tests pass

* remove compiler warnings

* remove compiler warnings

* remove dead code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.continue/
 .jqwik-database
 .metals/
 target/
@@ -5,3 +6,9 @@ trex2-lib/target/
 .idea/
 */.jqwik-database
 all.java
+*.db
+all.md
+all.java
+my.chatllm
+.aider*
+repomix-output.txt
