--- a/trex-lib/pom.xml
+++ b/trex-lib/pom.xml
@@ -32,6 +32,15 @@
             <version>5.15.2</version>
             <scope>test</scope>
         </dependency>
+        <!--
+        @With can pollyfill that JEP 468 `with` keyword has not yet landed.
+        -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
